Add Lenis smooth scrolling support and update layout components
- Integrated Lenis for smooth scrolling by adding the `SmoothScrollProvider` to the layout component.
- Updated global CSS to include styles for Lenis smooth scrolling.
- Modified `HeadlineSection` to accept an optional `id` prop for better navigation.
- Adjusted `HeaderContent` to handle smooth scrolling for internal links.
- Updated various MDX content files to include IDs for sections to facilitate smooth scrolling navigation.

--- a/content/about/br.mdx
+++ b/content/about/br.mdx
@@ -12,6 +12,7 @@ import MissionSection from '@/components/organisms/about/MissionSection';
 import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
+  id="transforming-women-healthcare"
   title="Transformando o cuidado de saúde da mulher através da inovação e compaixão"
   description="Na Eleva Care, nos dedicamos a capacitar mulheres de todas as idades para que assumam o controle de sua saúde e bem-estar."
 />
@@ -36,6 +37,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-vision"
   label="Nossa visão"
   title="Unindo ciência e cuidado para cada mulher"
   description="Para unir o gap entre pesquisa científica e aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as fases da vida."
@@ -68,6 +70,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-team"
   label="Conheça a nossa equipe"
   title="Liderada por inovadores e especialistas em saúde"
   description="Nossa equipe combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
@@ -104,6 +107,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="board-of-advisors"
   label="Guiada por especialistas do setor"
   title="Conselho Consultivo"
   description="Nossa consultoria de especialistas do setor traz consigo liderança e inovação para o nosso trabalho."
@@ -181,6 +185,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="join-our-network"
   label="Junte-se à nossa rede"
   title="Transforme os cuidados de saúde da mulher conosco"
   description="Junte-se a uma comunidade de profissionais de saúde dedicados que tornam os cuidados de qualidade acessíveis às mulheres em todo lugar."
