--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -12,6 +12,7 @@ import MissionSection from '@/components/organisms/about/MissionSection';
 import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
+  id="transforming-women-healthcare"
   headingLevel="h1"
   title="Transforming women's health care through innovation and compassion"
   description="At Eleva Care, we are dedicated to empowering women of all ages to take control of their health and well-being."
@@ -37,12 +38,14 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-vision"
   label="Our Vision"
   title="Bridging science and care for every woman"
   description="To bridge the gap between scientific research and practical application, delivering accessible and personalized women's health care solutions throughout every life stage."
 />
 
 <BeliefsSection
+  id="our-beliefs"
   title="Our Beliefs"
   beliefs={[
     {
@@ -69,6 +72,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-team"
   label="Meet our team"
   title="Led by healthcare innovators and experts"
   description="Our team combines expertise in women's health, technology, and patient care to revolutionize healthcare delivery."
@@ -105,6 +109,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="board-of-advisors"
   label="Guided by industry experts"
   title="Board of Advisors"
   description="Our advisory board brings together leading voices in women's health, healthcare innovation, and digital transformation."
@@ -183,6 +188,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="join-our-network"
   label="Join our network"
   title="Transform women's healthcare with us"
   description="Join a community of dedicated healthcare professionals making quality care accessible to women everywhere."
