--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -12,6 +12,7 @@ import MissionSection from '@/components/organisms/about/MissionSection';
 import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
+  id="transforming-women-healthcare"
   title="Transformando la atención médica para mujeres a través de la innovación y la compasión"
   description="En Eleva Care, nos dedicamos a empoderar a las mujeres de todas las edades para que tomen el control de su salud y bienestar."
 />
@@ -36,6 +37,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-vision"
   label="Nuestra visión"
   title="Uniendo ciencia y cuidado para cada mujer"
   description="Para unir el gap entre la investigación científica y la aplicación práctica, entregando soluciones de cuidados de salud de la mujer de forma accesible y personalizadas en todas las etapas de la vida."
@@ -68,6 +70,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-team"
   label="Conoce a nuestro equipo"
   title="Liderada por inovadores y expertos en salud"
   description="Nuestro equipo combina expertise en salud de la mujer, tecnología y cuidado con pacientes para revolucionar la entrega de cuidados de salud."
@@ -104,6 +107,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="board-of-advisors"
   label="Guiada por expertos en salud"
   title="Consejo Consultivo"
   description="Nuestro consejo consultivo reúne voces líderes en salud de la mujer, innovación en salud y transformación digital."
@@ -182,6 +186,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="join-our-network"
   label="Únete a nuestra red"
   title="Transforma la atención médica femenina con nosotros"
   description="Únete a una comunidad de profesionales dedicados que hacen que la atención de calidad sea accesible para mujeres en todas partes."
