--- a/content/about/pt.mdx
+++ b/content/about/pt.mdx
@@ -11,6 +11,7 @@ import MissionSection from '@/components/organisms/about/MissionSection';
 import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
+  id="transforming-women-healthcare"
   title="Transformando os cuidados de saúde da mulher através da inovação e compaixão"
   description="Na Eleva Care, dedicamo-nos a capacitar mulheres de todas as idades para que assumam o controlo da sua saúde e bem-estar."
 />
@@ -35,6 +36,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-vision"
   label="Nossa visão"
   title="Unindo ciência e cuidado para cada mulher"
   description="Para unir o gap entre a pesquisa científica e a aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as etapas da vida."
@@ -67,6 +69,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="our-team"
   label="Conheça a nossa equipa"
   title="Liderada por especialistas em saúde"
   description="A nossa equipa combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
@@ -103,6 +106,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="board-of-advisors"
   label="Guiada por especialistas do setor"
   title="Conselho Consultivo"
   description="Nossa consultoria de especialistas do setor traz consigo liderança e inovação para o nosso trabalho."
@@ -180,6 +184,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
+  id="join-our-network"
   label="Junte-se à nossa rede"
   title="Transforme os cuidados de saúde das mulheres connosco"
   description="Junte-se a uma comunidade de profissionais de saúde dedicados que tornam os cuidados de qualidade acessíveis às mulheres em todo o lado."
