Update closing messages in history pages for clarity and inclusivity
Revised the closing messages in the Brazilian Portuguese, English, Spanish, and Portuguese history pages to enhance clarity and inclusivity. The updates include a more direct invitation for professionals and individuals seeking evidence-based care to connect, along with a consistent link to join the community.

--- a/content/history/br.mdx
+++ b/content/history/br.mdx
@@ -130,7 +130,7 @@ _Com dedicação à ciência e cuidado genuíno,_
 _Fundadora, Eleva Care_  
 _Fisioterapeuta e Doutora em Biomecânica_
 
-_P.S. Se és uma profissional de saúde que partilha esta visão, ou uma mulher que procura cuidados baseados em evidência, adoraria conhecer-te. Esta comunidade cresce com cada voz que se junta à nossa._
+_P.S. Se você compartilha dessa visão como profissional, ou como alguém que busca cuidados baseados em evidências, adoraria conhecer você. [Esta comunidade cresce a cada voz que se junta a nós](/pt-br/about#join-our-network)._
 
 </div>
 
