--- a/content/history/es.mdx
+++ b/content/history/es.mdx
@@ -132,7 +132,7 @@ _Con dedicación a la ciencia y cuidado genuino,_
 _Fundadora, Eleva Care_  
 _Fisioterapeuta y Doctora en Biomecánica_
 
-_P.S. Si eres una profesional de la salud que comparte esta visión, o una mujer que busca atención basada en evidencia, me encantaría conocerte. Esta comunidad crece con cada voz que se une a la nuestra._
+_P.S. Si compartes esta visión como profesional, o como alguien que busca cuidados basados en evidencia, me encantaría conocerte. [Esta comunidad crece con cada voz que se une a la nuestra](/es/about#join-our-network)._
 
 </div>
 
