--- a/content/history/pt.mdx
+++ b/content/history/pt.mdx
@@ -96,7 +96,7 @@ _Com dedicação à ciência e cuidado genuíno,_
 _Fundadora, Eleva Care_  
 _Fisioterapeuta e Doutora em Biomecânica_
 
-_P.S. Se partilhas desta visão enquanto profissional, ou alguém que procura cuidados baseados em evidência, adoraria conhecer-te. Esta comunidade cresce com cada voz que se junta à nossa._
+_P.S. Se partilhas desta visão enquanto profissional, ou alguém que procura cuidados baseados em evidência, adoraria conhecer-te. [Esta comunidade cresce com cada voz que se junta à nossa](/pt/about#join-our-network)._
 
 </div>
 
