--- a/content/history/en.mdx
+++ b/content/history/en.mdx
@@ -101,7 +101,7 @@ _With dedication to science and genuine care,_
 _Founder, Eleva Care_  
 _Physiotherapist and PhD in Biomechanics_
 
-_P.S. If you're a healthcare professional who shares this vision, or a woman seeking evidence-based care, I'd love to meet you. [This community grows with each voice that joins ours](/about#join-our-network)._
+_P.S. If you share this vision as a professional, or as someone seeking evidence-based care, I’d love to connect with you. [This community grows with every voice that joins us](/about#join-our-network)._
 
 </div>
 
